# Blucast

./: CONTRIBUTING.md  Containerfile  README.md  flake.nix  install.sh  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/build-blucast/: action.yml
.github/workflows/: build.yml  packaging.yml
app/: CMakeLists.txt  audio_io.h  audio_processor.h  control_panel.py  server.cpp
packaging/: README.md
packaging/arch/: PKGBUILD  blucast.install
packaging/common/: blucast  blucast.desktop
packaging/common/modprobe.d/: blucast-v4l2loopback.conf
packaging/common/modules-load.d/: blucast.conf
packaging/common/pipewire/: blucast-vmic.conf
packaging/common/udev/: 83-blucast-vcam.rules
packaging/debian/: changelog  control  postinst  postrm  rules
packaging/fedora/: blucast.spec
packaging/nix/: module.nix  package.nix
scripts/: push-to-ghcr.sh  uninstall.sh  vmic_watcher.sh
